--- a/css/login-signup.sass
+++ b/css/login-signup.sass
@@ -135,3 +135,7 @@ img
 
 .logo
     margin: auto 0px auto 25px
+    transform: rotate(-15deg)
+    transition: all 1s
+    &:hover
+        transform: rotate(15deg)
