--- a/css/page.sass
+++ b/css/page.sass
@@ -38,8 +38,9 @@ button
     font-weight: 300
     font-family: $head-font
     &:hover
-        background-color: #ffffff00
+        background-color: $transperant
         color: $dark-color
+        border-color: $transperant
 
 .on-page
     @extend button
@@ -143,14 +144,14 @@ ul
             h3
                 font-family: $head-font
                 margin: 0 0 0 0
-                padding: 5px 0
+                padding: 0
             .field
                 max-width: auto
                 display: flex
                 flex-direction: column
                 align-items: center
                 input
-                    width: 140px
+                    width: 100px
                     margin: 0px
                     border-radius: 20px
                     padding: 5px 10px
@@ -159,7 +160,7 @@ ul
             .top
                 display: flex
                 flex-direction: row
-                height: 20px
+                height: 30px
                 .circle
                     display: flex
                     align-items: start
@@ -171,15 +172,16 @@ ul
                     height: 10px
 .action
     margin: 0px 0px
+    padding: 5px 0px
     width: 20px
     height: 100%
     border: none
     display: flex
-    align-items: end
-    align-content: end
+    justify-content: space-around
     background-color: $link-color
     &:hover
         background-color: $link-color
+        border-color: $transperant
     img
         margin: 0px
         padding: 0px
