--- a/css/main.sass
+++ b/css/main.sass
@@ -290,11 +290,12 @@ main
     color: $lt-color
     height: auto
     width: 100%
+    margin: 5px
 
 .card
     float: left
     display: flex
-    min-width: 100px
+    max-width: 150px
     flex-direction: column
     align-items: center
     align-content: center
@@ -326,7 +327,7 @@ main
 .top
     display: flex
     flex-direction: row
-    height: 5px
+    height: 20px
     .circle
         display: flex
         align-items: start
@@ -367,7 +368,7 @@ label
     margin: 0 0 0 0
 
 @media screen and (max-width: 1130px)
-    .container
+    #main
         display: none
     .presentation
         max-width: 220px
