--- a/jsx/src/css/login-signup.css
+++ b/jsx/src/css/login-signup.css
@@ -57,7 +57,7 @@ h3 {
   font-family: "BIZ UDPMincho", serif;
 }
 
-.background {
+.mbackground {
   background: url(../../public/images/back_color.jpg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
