--- a/jsx/src/css/login-signup.sass
+++ b/jsx/src/css/login-signup.sass
@@ -49,7 +49,7 @@ button
 h3
     font-family: $head-font
 
-.background
+.mbackground
     background: $background
     background-repeat: no-repeat
     background-size: 100% 100%
